--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "baseUrl": "./",
+    "rootDir": "./",
+    "paths": {
+      "@src/*": ["src/*"],
+    },
     "jsx": "react-jsx"
   },
   "include": [
